[package]
name = "takeover"
version = "0.1.1"
authors = ["Thomas Runte <thomasr@balena.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/migrator/lib.rs"

[dependencies]

[dependencies.libc]
version = "0.2.70"

[dependencies.reqwest]
version = "0.10.4"
features = ["blocking", "json"]

[dependencies.url]
version = "2.1.1"

[dependencies.paw]
version = "1.0"

[dependencies.structopt]
version = "0.3.14"
features = ["paw"]

[dependencies.log]
version = "0.4.8"
features = ["std"]

[dependencies.regex]
 version = "=1.3.7"

[dependencies.nix]
 version = "0.17.0"

[dependencies.semver]
 version = "0.9.0"

[dependencies.serde]
 version = "1.0.110"
 features = ["derive"]

[dependencies.serde_yaml]
 version = "0.8.12"

[dependencies.serde_json]
version = "1.0.53"

[dependencies.flate2]
version = "1.0.14"

[dependencies.mod_logger]
version = "0.7.0"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.rand]
version = "0.7.3"

[dependencies.cfg-if]
version = "0.1"

[dependencies.tar]
version = "0.4"

[features]
raspberrypi3 = []
raspberrypi4-64 = []
intel-nuc = []

