[package]
name = "takeover"
description = "Brownfield device migration tool to balenaOS and balenaCloud"
version = "0.8.1"
authors = ["balena.io"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"

[dependencies]

[dependencies.libc]
version = "0.2.70"

[dependencies.finder]
version = "0.1"

[dependencies.file_diff]
version = "1.0.0"

[dependencies.reqwest]
version = "0.11.24"
features = ["blocking", "json"]

[dependencies.url]
version = "2.5.0"

[dependencies.paw]
version = "1.0"

[dependencies.clap]
version = "4.5.0"
features = ["derive"]

[dependencies.log]
version = "0.4.8"
features = ["std"]

[dependencies.regex]
 version = "1.10.3"

[dependencies.nix]
version = "0.27.1"
features = ["fs", "mount"]

[dependencies.semver]
 version = "0.9.0"

[dependencies.serde]
 version = "1.0.110"
 features = ["derive"]

[dependencies.serde_yaml]
 version = "0.8.12"

[dependencies.serde_json]
version = "1.0.53"

[dependencies.flate2]
version = "1.0.14"

[dependencies.mod_logger]
version = "0.8.4"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.rand]
version = "0.7.3"

[dependencies.cfg-if]
version = "0.1"

[dependencies.tar]
version = "0.4"

[dependencies.which]
version = "6.0.0"

[dependencies.openssl]
version = "0.10.63"
features = ["vendored"]

[dependencies.lddtree]
version = "0.3.4"

[features]
raspberrypi3 = []
raspberrypi4-64 = []
intel-nuc = []
jetson-xavier = []

[dependencies.gptman]
version = "1.0.2"

# Required to get past "ambiguous name" errors in pin-project-internal v0.4.17.
# See https://github.com/taiki-e/pin-project/issues/337
# Problem was triggered by addition of gptman.
# This package seems foundational and important to keep updated.
[dependencies.futures]
version = "0.3.30"
